Users clicks a link named "Add a Product"

--- a/views/new.erb
+++ b/views/new.erb
@@ -2,7 +2,6 @@
 <html>
   <head></head>
   <body>
-    <h1>Welcome</h1>
-    <a href="/new">Add a Product</a>
+    <h1>New Product</h1>
   </body>
 </html>
