User enters some text for the product name and clicks a button called "Create Product"

--- a/views/new.erb
+++ b/views/new.erb
@@ -3,5 +3,9 @@
   <head></head>
   <body>
     <h1>New Product</h1>
+    <form action="/" method="post">
+      <input type="text" name="new_item" placeholder="Product Name" autofocus="autofocus">
+      <input type="submit" value="Create Product">
+    </form>
   </body>
 </html>
